--- a/python/train_test_split.ipynb
+++ b/python/train_test_split.ipynb
@@ -29,7 +29,7 @@
     "    hashed = crc32(byteslike_identifier) & 0xFFFFFFFF\n",
     "\n",
     "    max_hash = 2 ** 32 - 1\n",
-    "    test_boundary = max_hash - max_hash * 0.2\n",
+    "    test_boundary = max_hash - max_hash * test_ratio\n",
     "    validation_boundary = test_boundary - max_hash * validation_ratio\n",
     "    \n",
     "    if hashed >= test_boundary:\n",
